--- a/index.html
+++ b/index.html
@@ -1,21 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>My hero to save the World</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+
+<body class="container">
+    <h1>My hero to save the World</h1>
     <section id="scoreBoard">
-        <h2 id ="scoreB">Score Board</h2>
+        <h2 id="scoreB">Score Board</h2>
     </section>
 
-    <canvas id="canvas" width="288" height="522"></canvas>
-    
+    <canvas id="canvas"></canvas>
 
-    <button type="button" id="startBtn" onclick="startBtn()">Start</button>
-    <button type="button" id="restartBtn" onclick="restartBtn()">Restart</button>
+
+    <button type="button" id="startBtn" onclick="startBTn()">Start</button>
+    <button type="button" id="restartBtn" onclick="restartBTn()">Restart</button>
     <script src="main.js"></script>
 </body>
+
 </html>
